# zuixinkirors

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.json  git-submit.ps1  start.ps1
.github/workflows/: build.yaml  docker-build.yaml
admin-ui/: package-lock.json  package.json
admin-ui/src/: App.tsx
admin-ui/src/api/: client-keys.ts  credentials.ts  groups.ts  stats.ts  traces.ts
admin-ui/src/components/: add-credential-dialog.tsx  batch-edit-credential-dialog.tsx  cache-metering-page.tsx  cache-optimizer.tsx  client-keys-page.tsx  credential-card.tsx  dashboard.tsx  edit-credential-dialog.tsx  group-select.tsx  groups-page.tsx  overview-page.tsx  social-login-dialog.tsx  topbar-tools.tsx  trace-log-page.tsx
admin-ui/src/hooks/: use-cache-metering.ts  use-cache-optimizer.ts  use-client-keys.ts  use-credentials.ts  use-groups.ts  use-stats.ts
admin-ui/src/lib/: utils.ts
admin-ui/src/types/: api.ts
doc/: 429重试次数配置方案.md  tool_use工具链400修复方案.md  上游v0.6.7安全合并方案.md  启动方法.md  并发调度中心实施计划.md  并发调度中心迁移方案.md  待办事项.md  提交git.md  真实缓存命中率90以上优化方案.md
src/: image_resize.rs  main.rs
src/admin/: binary_update.rs  client_keys.rs  groups.rs  handlers.rs  middleware.rs  mod.rs  proxy_pool.rs  router.rs  service.rs  trace_db.rs  types.rs  usage_stats.rs
src/anthropic/: cache_metering.rs  cache_rewriter.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  router.rs  stream.rs  websearch.rs  websearch_loop.rs
src/kiro/: provider.rs  token_manager.rs
src/kiro/endpoint/: cli.rs  mod.rs
src/kiro/model/: available_models.rs  credentials.rs
src/kiro/model/events/: metering.rs
src/model/: config.rs
