[package]
name = "kiro-rs"
version = "0.6.6"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls-vendored"]

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
# Image resize for inbound user/MCP images so AWS Q stays within request size
# limit. Pure-Rust, no C deps. PNG/JPEG/WebP/GIF only — keeps build slim.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
thiserror = "1"
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
flate2 = "1"        # tar.gz 解压（在线更新）
tar = "0.4"         # tar 解析（在线更新）
zip = { version = "2", default-features = false, features = ["deflate"] }  # zip 解压（Windows 在线更新）
rusqlite = { version = "0.32", features = ["bundled"] }  # 请求链路追踪持久化（自带 SQLite 源码）
